--- a/app/src/main/res/layout/fragment_word_item.xml
+++ b/app/src/main/res/layout/fragment_word_item.xml
@@ -3,11 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Model.WordItemFragment">
+    tools:context=".Fragment.WordItemFragment">
+    <ListView
+        android:id="@+id/listWords"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+
 </androidx.core.widget.NestedScrollView>
