--- a/app/src/main/res/layout/fragment_word_detail.xml
+++ b/app/src/main/res/layout/fragment_word_detail.xml
@@ -6,7 +6,16 @@
     tools:context=".Fragment.WordDetailFragment">
 
     <TextView
+        android:id="@+id/word"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin" />
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/wordmeaning"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/wordsample"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </androidx.core.widget.NestedScrollView>
