--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -15,4 +15,20 @@
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints"></TextView>
 
+    <EditText
+        android:id="@+id/txtWord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"></EditText>
+    <EditText
+        android:id="@+id/txtMeaning"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"></EditText>
+    <EditText
+        android:id="@+id/txtSample"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"></EditText>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
