--- a/app/src/main/res/layout/fragment_word_item.xml
+++ b/app/src/main/res/layout/fragment_word_item.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/wordslist"
     tools:context=".Fragment.WordItemFragment">
     <ListView
         android:id="@+id/listWords"
