--- a/app/src/main/res/layout/fragment_word_item.xml
+++ b/app/src/main/res/layout/fragment_word_item.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name="com.example.wordbook.Fragment.WordItemFragment"
-    android:id="@+id/wordsList"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".Fragment.WordItemFragment"
-    tools:listitem="@layout/item">
-
-
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    tools:context=".Fragment.WordItemFragment">
+    <ListView
+    android:id="@android:id/list"
+    android:scrollbars="vertical"
+    android:dividerHeight="1dp"
+    android:divider="#00000000"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:listitem="@layout/item"/>
 </androidx.core.widget.NestedScrollView>
