--- a/app/src/main/res/layout/fragment_word_detail.xml
+++ b/app/src/main/res/layout/fragment_word_detail.xml
@@ -12,21 +12,25 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/word"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="30dp"/>
 
         <TextView
             android:id="@+id/wordmeaning"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="30dp"/>
 
         <TextView
             android:id="@+id/wordsample"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="30dp"/>
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
