--- a/app/src/main/res/layout/fragment_word_item.xml
+++ b/app/src/main/res/layout/fragment_word_item.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    tools:context=".Fragment.WordItemFragment">
-    <ListView
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:layout_marginLeft="10dp"
+android:layout_marginRight="10dp"
+tools:context=".Fragment.WordItemFragment">
+
+<ListView
     android:id="@android:id/list"
-    android:scrollbars="vertical"
-    android:dividerHeight="1dp"
-    android:divider="#00000000"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:listitem="@layout/item"/>
+    android:divider="#00000000"
+    android:dividerHeight="1dp"
+    android:scrollbars="vertical"
+    android:textSize="30dp"
+    tools:listitem="@layout/item" />
 </androidx.core.widget.NestedScrollView>
