--- a/app/src/main/res/menu/contextmenu_wordslistview.xml
+++ b/app/src/main/res/menu/contextmenu_wordslistview.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_delete"
         android:title="@string/delete"
+        android:textSize="30sp"
+        android:layout_centerInParent="true"
         android:onClick="onContextItemSelected"
         ></item>
     <item
         android:id="@+id/action_update"
         android:title="@string/update"
+        android:layout_centerInParent="true"
+        android:textSize="30sp"
         android:onClick="onContextItemSelected"></item>
 </menu>
