--- a/app/src/main/res/menu/contextmenu_wordslistview.xml
+++ b/app/src/main/res/menu/contextmenu_wordslistview.xml
@@ -2,15 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_delete"
-        android:title="@string/delete"
-        android:textSize="30sp"
         android:layout_centerInParent="true"
         android:onClick="onContextItemSelected"
-        ></item>
+        android:textSize="30sp"
+        android:title="@string/delete"></item>
     <item
         android:id="@+id/action_update"
-        android:title="@string/update"
+        android:layout_centerInParent="true"
+        android:onClick="onContextItemSelected"
+        android:textSize="30sp"
+        android:title="@string/update"></item>
+    <item
+        android:id="@+id/action_remenber"
+        android:title="@string/addToNotebook"
         android:layout_centerInParent="true"
         android:textSize="30sp"
-        android:onClick="onContextItemSelected"></item>
+        android:onClick="onContextItemSelected"/>
+
 </menu>
