--- a/app/src/main/res/layout/fragment_remenber_word.xml
+++ b/app/src/main/res/layout/fragment_remenber_word.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:layout_marginTop="80dp"
+    android:gravity="center"
     tools:context=".Fragment.RemenberWordFragment">
 
     <LinearLayout
